Non-working unified model tests, but compiled